[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    # 기본 빌드/설치 툴
    "pip",
    "setuptools",
    "wheel",
    # uni2ts 호환 패키지 버전
    "numpy==1.26.4", # uni2ts 요구: >=1.26,<1.27
    "scipy==1.11.4", # uni2ts 요구: >=1.11.3,<1.12
    "torch==2.4.1", # 호환: >=2.1,<2.5
    # 기타 분석 패키지
    "pandas>=2.3.2",
    "pyproj>=3.7.2",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    # Git에서 직접 가져오는 패키지
    "uni2ts @ git+https://github.com/SalesforceAIResearch/uni2ts.git",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "chinese-calendar>=1.10.0",
    "pyplotlib>=0.0.56",
    "matplotlib>=3.10.6",
]

[tool.uv.sources]
# torch는 PyTorch CUDA 12.1 인덱스에서만 가져오기
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
